--- a/dependencies/requirements.txt
+++ b/dependencies/requirements.txt
@@ -1,7 +1,10 @@
 attrs==19.1.0
 backcall==0.1.0
 bleach==2.1.3
+cloudpickle==1.2.1
 cycler==0.10.0
+Cython==0.29.2
+dask==1.2.2
 decorator==4.3.2
 entrypoints==0.2.3
 future==0.16.0
@@ -23,6 +26,7 @@ matplotlib==3.0.2
 mistune==0.8.4
 nbconvert==5.3.1
 nbformat==4.4.0
+networkx==2.2
 notebook==5.7.4
 numpy==1.16.2
 opencv-python==3.4.4.19
@@ -32,14 +36,18 @@ pexpect==4.6.0
 pickleshare==0.7.5
 Pillow==5.3.0
 prometheus-client==0.3.1
-prompt-toolkit==2.0.7
+prompt-toolkit==1.0.16
+protobuf==3.7.1
 ptyprocess==0.6.0
+pydensecrf==1.0rc2
 Pygments==2.3.1
 pyparsing==2.3.1
 python-dateutil==2.8.0
+PyWavelets==1.0.1
 PyYAML==3.13
 pyzmq==17.1.2
 qtconsole==4.3.1
+scikit-image==0.14.2
 scikit-learn==0.20.2
 scipy==1.2.1
 Send2Trash==1.5.0
@@ -49,8 +57,9 @@ spams==2.6.1
 terminado==0.8.1
 testpath==0.3.1
 texttable==1.6.1
-torch==1.0.0
-torchvision==0.2.1
+toolz==0.9.0
+torch-nightly==1.2.0.dev20190616
+torchvision==0.2.2.post3
 tornado==5.1.1
 tqdm==4.31.1
 traitlets==4.3.2
